# pgx_fdw

./: Cargo.toml  README.md
examples/inmem_table/: Cargo.toml  README.md  inmem_table.control
examples/inmem_table/src/: lib.rs
src/: lib.rs
