[package]
name = "pgx-fdw"
version = "0.0.1"
edition = "2018"

[lib]
crate-type = ["rlib"]

[features]
default = ["pg13"]
pg10 = ["pgx/pg10"]
pg11 = ["pgx/pg11"]
pg12 = ["pgx/pg12"]
pg13 = ["pgx/pg13"]

[dependencies]
pgx = "0.1.18"
pgx-macros = "0.1.18"

[dev-dependencies]
pgx-tests = "0.1.18"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
